[package]
name = "mcp-server-cortex"
version = "0.1.0"
edition = "2024"
authors = ["Gianluca Brigandi"]
license = "MIT"
description = "An MCP server that acts as a bridge to a Cortex instance, exposing Cortex analyzer functionalities as tools."
repository = "https://github.com/gbrigandi/mcp-server-cortex" # Please verify this URL
readme = "README.md"

[lib]
name = "mcp_server_cortex"
path = "src/lib.rs"

[[bin]]
name = "mcp-server-cortex"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.3.0", features = ["server", "transport-io"] }
rmcp-macros = "0.3.0"
cortex-client = "0.1.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
 
async-trait = "0.1.88"

[dev-dependencies]
tokio-test = "0.4"
tokio-util = "0.7"
serde_json = "1.0"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
http-body-util = "0.1"
